objects/Mkt_Taxonomy_Master__c.object
<CustomObject>
    <description>Created as a part of DPS - 18904</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Created as a part of DPS - 18904</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Txnmy_Master_Level__c</fullName>
        <description>Created as a part of DPS - 18904</description>
        <label>Taxonomy Master Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Txnmy_Master_Status__c</fullName>
        <description>Created as a  part of DPS - 18904</description>
        <label>Taxonomy Master Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Active</fullName>
                </value>
                <value>
                    <fullName>1 - Inactive (Paused)</fullName>
                </value>
                <value>
                    <fullName>2 - Inactive (Removed)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Txnmy_Master_id__c</fullName>
        <description>Created as a part of DPS - 18904</description>
        <externalId>true</externalId>
        <label>Taxonomy Master Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Txnmy_Name__c</fullName>
        <description>Created as a apart of DPS  - 18904</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Taxonomy Master</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Taxonomy Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taxonomy Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>